# src/routers/funcionario.ts
@@ -7,8 +7,9 @@ import * as Authotization from "../middleware/authorized";
 const router = express.Router();
 
 router.post("/add", validate(Schema.CreateFuncionarioSchema), Controller.createFuncionario);
-router.get("/all/:escola_id", Authotization.verifyAuthenticationSuperAdmin, Controller.getFuncionariosByEscola);
-router.get("/each/:funcionario_id", Controller.getFuncionarioById);
-router.put("/update/:funcionario_id", Controller.updateFuncionario);
+router.get("/all/:escola_id", Authotization.verifyAuthenticationAdminSchool, Controller.getFuncionariosByEscola);
+router.get("/each/:funcionario_id", Authotization.verifyAuthenticationAdminSchool, Controller.getFuncionarioById);
+router.get("/me", Authotization.verifyAuthentication, Controller.getMeFuncionario);
+router.put("/update", Authotization.verifyAuthenticationAdminSchool, Controller.updateFuncionario);
 
 export default router;
